  not use the Microsoft preferred date data types that were added with SQL Server 2008. :issue:`31`
- Improved accuracy of field type guessing with inspectdb. See :ref:`introspecting-custom-fields`
- Fixed issue with identity insert using a cursor to the wrong database in a multi-database environment. Thanks Mikhail 
  Denisenko

v1.3.1
------

- Ensure Django knows to re-enable constraints. :issue:`29`

v1.3
----

- Backend now supports returning the ID from an insert without needing an additional query. This is disabled
  for SQL Server 2000 (assuming that version still works with this backend). :issue:`17`

  - This will work even if the table has a trigger. :issue:`20`

- Subqueries will have their ordering removed because SQL Server only supports it when using TOP or FOR XML. 
  This relies upon the ``with_col_aliases`` argument to ``SQLCompiler.as_sql`` only being ``True`` when the query 
  is a subquery, which is currently the case for all usages in Django 1.5 master. :issue:`18`
- UPDATE statements will now return the number of rows affected, instead of -1. :issue:`19`
- Apply fix for :djangoticket:`12192`. If QuerySet slicing would result in ``LIMIT 0``, then it shouldn't reach
  the database because there will be no response.
- Implemented DatabaseOperation ``cache_key_culling_sql``. :djangoticket:`18330`
- Fixed ``cast_avg_to_float`` so that it only controls the cast for ``AVG`` and not mapping other aggregates.
- Improved IP address detection of :setting:`HOST` setting. :issue:`21`
- Set database feature ``ignores_nulls_in_unique_constraints = False`` because MSSQL cannot ignore NULLs in 
  unique constraints.
- :issue:`26` Documented clustered index issue with Azure SQL. See :ref:`azure-clustered-indices`.

v1.2
----

- Ensure master connection connects to the correct database name when TEST_NAME is not defined.
- Connection.close() will now reset adoConn to make sure it's gone before the CoUninitialize.